// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sidenav renders 1`] = `
.emotion-3 {
  position: fixed;
  top: 0;
  left: 0;
  bottom: 0;
  z-index: 1;
  min-width: 0;
  width: 256px;
  max-height: 100vh;
  overflow-x: visible;
  overflow-y: auto;
  -webkit-overflow-scrolling: touch;
  -webkit-transition: -webkit-transform .2s ease-out;
  -webkit-transition: transform .2s ease-out;
  transition: transform .2s ease-out;
  -webkit-transform: translate(-100%);
  -ms-transform: translate(-100%);
  transform: translate(-100%);
  background-color: background;
}

@media screen and (min-width:40em) {
  .emotion-3 {
    position: -webkit-sticky;
    position: sticky;
    bottom: auto;
    -webkit-transform: none;
    -ms-transform: none;
    transform: none;
    background-color: transparent;
  }
}

<div
  className="emotion-3"
>
  <ul>
    <li>
      <a
        className="emotion-0"
        href="/"
        mdxType="a"
      >
        Beep
      </a>
    </li>
    <li>
      <a
        className="emotion-0"
        href="/boop"
        mdxType="a"
      >
        Boop
      </a>
    </li>
    <li>
      <a
        className="emotion-0"
        href="/bop"
        mdxType="a"
      >
        Bop
      </a>
    </li>
  </ul>
</div>
`;

exports[`Sidenav renders open 1`] = `
Array [
  .emotion-0 {
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
}

<div
    className="emotion-0"
  />,
  .emotion-3 {
  position: fixed;
  top: 0;
  left: 0;
  bottom: 0;
  z-index: 1;
  min-width: 0;
  width: 256px;
  max-height: 100vh;
  overflow-x: visible;
  overflow-y: auto;
  -webkit-overflow-scrolling: touch;
  -webkit-transition: -webkit-transform .2s ease-out;
  -webkit-transition: transform .2s ease-out;
  transition: transform .2s ease-out;
  -webkit-transform: translateX(0);
  -ms-transform: translateX(0);
  transform: translateX(0);
  background-color: background;
}

@media screen and (min-width:40em) {
  .emotion-3 {
    position: -webkit-sticky;
    position: sticky;
    bottom: auto;
    -webkit-transform: none;
    -ms-transform: none;
    transform: none;
    background-color: transparent;
  }
}

<div
    className="emotion-3"
  >
    <ul>
      <li>
        <a
          className="emotion-0"
          href="/"
          mdxType="a"
        >
          Beep
        </a>
      </li>
      <li>
        <a
          className="emotion-0"
          href="/boop"
          mdxType="a"
        >
          Boop
        </a>
      </li>
      <li>
        <a
          className="emotion-0"
          href="/bop"
          mdxType="a"
        >
          Bop
        </a>
      </li>
    </ul>
  </div>,
]
`;
